nav font update

--- a/app/globals.css
+++ b/app/globals.css
@@ -671,6 +671,11 @@ h1,h2,h3,h4 {
 }
 
 /* media-query */
+@media(max-width: 1200px) {
+  .nav {
+    font-size: 1.6rem;
+  }
+}
 @media(max-width: 780px) {
   /*  */
   .mob {
