--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -68,6 +68,8 @@
     align-items: flex-start;
     justify-content: space-between;
     height: 28em;
+    padding: 0 2rem;
+    margin: 8em 0 6em 0;
 }
 .works-showcase-right {
     display: flex;
@@ -76,6 +78,7 @@
     justify-content: space-between;
     height: 28em;
     margin: 8em 0 6em 0;
+    padding: 0 2rem;
 }
 /* work hero mob */
 .works-showcase-left-mob, .works-showcase-right-mob  {
