--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -168,7 +168,7 @@
     width: 85%;
 }
 .work-brief-right-bottom {
-    margin-top: 1.4em;
+    /* margin-top: 1.4em; */
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
