--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -168,6 +168,7 @@
     width: 85%;
 }
 .work-brief-right-bottom {
+    /* j */
     /* margin-top: 1.4em; */
     display: flex;
     flex-wrap: wrap;
