--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -403,7 +403,7 @@
     /* Contact Showcase */
     .c-showcase {
         font-size: 3rem;
-        padding: 5rem 1rem 5rem 1rem;
+        padding: 0 1rem 5rem 1rem;
     }
     .c-showcase-title-wrapper.mob {
         display: flex;
