--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -648,7 +648,7 @@
         padding-inline: 2rem;
         width: 100vw;
         /* padding-left: 2rem; */
-        margin: 2em 0;
+        margin: 2em 0 0 0;
         font-size: 3rem;
     } 
     .works-showcase-right-mob  {
