--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -645,10 +645,11 @@
     .works-showcase-left-mob{
         display: flex;
         flex-direction: column;
-        padding-inline: 2rem;
+        /* padding-inline: 2rem; */
+        padding: 2rem;
         width: 100vw;
         /* padding-left: 2rem; */
-        margin: 2em 0 0 0;
+        /* margin: 2em 0 0 0; */
         font-size: 3rem;
     } 
     .works-showcase-right-mob  {
