--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -367,6 +367,7 @@
         align-items: center;
         justify-content: center;
         /* padding: 5rem 0 0rem 3rem; */
+        padding: 0 0 0 1rem!important;
     }
     .eyebrow {
         width: 100%;
