hero media query update

--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -397,6 +397,10 @@
         width: 70%;
         margin-top: 5em;
     }
+    .video-modal-video-container {
+        height: 80lvh;
+        width: 70%;
+    }
     /* Home Brief */
     .home-brief {
         font-size: 3rem;
