--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -75,7 +75,8 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: end;
+    gap: 0.4em;
     height: 28em;
     margin: 8em 0 6em 0;
     padding: 0 2rem;
