--- a/app/globals.css
+++ b/app/globals.css
@@ -750,6 +750,9 @@ h1,h2,h3,h4 {
   .footer {
     font-size: 1.2rem;
   }
+  .address-description {
+    width: 80%;
+  }
 }
 @media(max-width: 1200px) {
   .nav {
