--- a/app/globals.css
+++ b/app/globals.css
@@ -498,7 +498,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  /* overflow: hidden; */
   font-size: 1vw;
   font-family: haffer-R;
 }
