--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -66,7 +66,8 @@
 .works-showcase-left {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 0.4em;
     height: 28em;
     padding: 0 2rem;
     margin: 8em 0 6em 0;
