--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -241,6 +241,15 @@
     justify-content: center;
     overflow-y: hidden;
 }
+.vertical-image {
+    height: auto;
+    width: 100%;
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: hidden;
+}
 .desk-parallax {
     /* border: 1px red solid; */
 }
