--- a/app/globals.css
+++ b/app/globals.css
@@ -773,7 +773,7 @@ h1,h2,h3,h4 {
     gap: 2em;
   }
 }
-@media(max-width: 780px) {
+@media(max-width: 680px) {
   /*  */
   .cursor-A {
     display: none;
@@ -799,6 +799,9 @@ h1,h2,h3,h4 {
     transform: translateX(-50%);
     z-index: 20;
     transition: all 0.5s var(--quint);
+
+    padding: 2em !important; 
+    width: fit-content;
   }
   .nav {
     padding-top: 6em;
