--- a/app/globals.css
+++ b/app/globals.css
@@ -537,6 +537,7 @@ h1,h2,h3,h4 {
   align-items: center;
   justify-content: space-between;
   transition: var(--transition-quart);
+  mix-blend-mode: difference;
   z-index: 200;
   font-size: 1rem;
 }
@@ -585,9 +586,9 @@ h1,h2,h3,h4 {
   transition: var(--transition-quint);
 }
 .nav-logo-svg {
-  color: white;
+  /* color: white; */
   
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
 }
 .nav-logo-svg.white-section {
   color: black;
